client/one/app/shared/components/smart-grid/smart-grid.component.less
@import 'variables';
@import './_smart-grid.component.variables.less';

.zem-smart-grid {
    display: block;
}

.zem-smart-grid__table .ag-root {
    border: none;
    margin-bottom: @spacing--default;
}

// https://github.com/ag-grid/ag-grid/issues/846
body.ag-unselectable * {
    user-select: none;
}

//
// ag-header
//

.zem-smart-grid__table .ag-header {
    background-color: tint(@color--secondary, 90%);
    border-bottom: 1px solid tint(@color--secondary, 80%);
}

.zem-smart-grid__table .ag-header .ag-header-cell:hover {
    background-color: tint(@color--secondary, 95%);
}

.zem-smart-grid .ag-header .ag-header-cell:not(:last-child) {
    border-right: 1px solid tint(@color--secondary, 80%);
}

.zem-smart-grid__table .ag-header .ag-pinned-left-header {
    border-right: 1px solid tint(@color--secondary, 80%);
}

.zem-smart-grid__table .ag-header .ag-pinned-right-header {
    border-left: 1px solid tint(@color--secondary, 80%);
}

.zem-smart-grid__table .ag-header .ag-header-cell .ag-header-select-all {
    flex: 0 0 auto;
    height: 100%;
    padding: @spacing--small 0 @spacing--small @spacing--small;
}

.zem-smart-grid__table
    .ag-header
    .ag-header-cell
    > *:not(.ag-header-cell-resize):not(.ag-header-select-all) {
    flex: 1 1 0;
    width: 0;
    height: 100%;
}

//
// ag-dnd-ghost (drag and drop)
//

.ag-dnd-ghost {
    display: flex;
    align-items: center;
    padding: @spacing--small;
    height: @smart-grid__header-height !important;
    background-color: tint(@color--secondary, 90%);
    border: 1px solid tint(@color--secondary, 80%);
    box-shadow: 0px 0px 6px 0px fade(@color--secondary, 10%);
    color: @color--secondary;
    font-weight: 500;
    font-size: @font-size--default;
}

//
// ag-floating-top
//
.zem-smart-grid__table .ag-floating-top {
    background-color: tint(@color--secondary, 90%);
    border-bottom: 1px solid tint(@color--secondary, 80%);
}

//
// ag-body-viewport
//

.zem-smart-grid__table .ag-body-viewport {
    background-color: white;
    border-bottom: 1px solid tint(@color--secondary, 80%);
}

.zem-smart-grid .ag-center-cols-clipper {
    min-height: @smart-grid__row-height;
}

.zem-smart-grid__table .ag-body-viewport .ag-row {
    border-bottom: 1px solid tint(@color--secondary, 90%) !important;
}

.zem-smart-grid__table .ag-body-viewport .ag-row:last-child {
    border-bottom: 0px !important;
}

.zem-smart-grid__table .ag-row-hover:not(.ag-row-pinned) {
    background-color: tint(@color--secondary, 96%) !important;
}

//
// ag-floating-bottom
//

.zem-smart-grid__table .ag-floating-bottom {
    background-color: tint(@color--secondary, 90%);
}

//
// ag-cell
//

.zem-smart-grid__table .ag-row .ag-cell {
    padding: @spacing--small;
    line-height: (@font-size--default)+3;
}

.zem-smart-grid__table .ag-row .ag-cell:focus,
.zem-smart-grid__table .ag-row .ag-cell:hover {
    outline: none;
}

.zem-smart-grid__table .ag-cell-value {
    width: 100%;
}

.zem-smart-grid__table .ag-row .ag-cell .ag-checkbox {
    margin-right: @spacing--small;
}

.zem-smart-grid__table
    .ag-cell.ag-cell-last-left-pinned:not(.ag-cell-range-right):not(.ag-cell-range-single-cell) {
    border-right: 1px solid tint(@color--secondary, 80%);
}

.zem-smart-grid__table
    .ag-cell.ag-cell-first-right-pinned:not(.ag-cell-range-left):not(.ag-cell-range-single-cell) {
    border-left: 1px solid tint(@color--secondary, 80%);
}

//
// ag-cell flash
//

.zem-smart-grid .ag-cell-data-changed {
    background-color: fade(@color--primary, 15%) !important;
}

.zem-smart-grid .ag-cell-data-changed-animation {
    background-color: transparent;
}

//
// ag-overlay
//

.zem-smart-grid .ag-overlay {
    top: @smart-grid__header-height;
    height: calc(100% - @smart-grid__header-height);
}

.zem-smart-grid .ag-overlay-no-rows-wrapper {
    align-items: flex-start;
}

//
// ag-checkbox-input
//

.zem-smart-grid__table .ag-checkbox-input-wrapper .ag-checkbox-input {
    display: block;
    width: 14px;
    height: 14px;
}

.zem-smart-grid__table .ag-checkbox-input-wrapper .ag-checkbox-input:hover {
    cursor: pointer;
}

.zem-smart-grid input[type='checkbox'] {
    margin: 0;
}

//
// pagination
//

.zem-smart-grid__pagination-container {
    display: flex;
}

.zem-smart-grid__pagination-page-size {
    flex: 0 0 60px;
    margin-right: 5px;
}

